<resources>
    <string name="app_name">MemoriesHub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign In</string>
    <string name="name_up_case">NAME</string>
    <string name="email_up_case">EMAIL</string>
    <string name="email">Email</string>
    <string name="user_name">Name</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="testing">Testing</string>

</resources>