<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background"
    tools:context='lex.neuron.memorieshub.ui.firebase.authenticate.account.Account'>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/name_up_case"
            android:textColor="@color/my_btn_easy" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/user_name"
            android:textColor="@color/my_btn_easy"
            android:textSize="32dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/email_up_case"
            android:textColor="@color/my_btn_easy" />


        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans"
            android:text="@string/email"
            android:textColor="@color/my_btn_easy"
            android:textSize="22dp" />

        <Button
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_out" />

    </LinearLayout>

</FrameLayout>